k8s/nexus/deployment.yaml
---
# Source: nexus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  labels:
    helm.sh/chart: nexus-3.22.0
    app.kubernetes.io/name: nexus
    app.kubernetes.io/instance: nexus
    app.kubernetes.io/version: "3.22.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
    - port: 8083
      targetPort: docker
      protocol: TCP
      name: docker
  selector:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/instance: nexus
---
# Source: nexus/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  labels:
    helm.sh/chart: nexus-3.22.0
    app.kubernetes.io/name: nexus
    app.kubernetes.io/instance: nexus
    app.kubernetes.io/version: "3.22.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nexus
      app.kubernetes.io/instance: nexus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nexus
        app.kubernetes.io/instance: nexus
    spec:
      serviceAccountName: nexus
      securityContext:
        {}
      containers:
        - name: nexus
          securityContext:
            {}
          image: "sonatype/nexus3:3.22.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
            - name: docker
              containerPort: 8083
              protocol: TCP
          resources:
            {}
          volumeMounts:
            - mountPath: /nexus-data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim: 
            claimName: nexus
      nodeSelector:
        storage: repository
---
# Source: nexus/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus
  labels:
    helm.sh/chart: nexus-3.22.0
    app.kubernetes.io/name: nexus
    app.kubernetes.io/instance: nexus
    app.kubernetes.io/version: "3.22.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - "*.chaldea.cn"
      secretName: wildcard-chaldea-cn-tls
  rules:
    - host: "mirror.chaldea.cn"
      http:
        paths:
          - path: 
            backend:
              serviceName: nexus
              servicePort: 8081
    - host: "docker.chaldea.cn"
      http:
        paths:
          - path: 
            backend:
              serviceName: nexus
              servicePort: 8083
